1. remove HunterAssist AddOn 2. add zFeeder for Hunter (copy from HunterAssist) 3. add AspectPosionBar AddOn 4. add some common functions to Patch.lua (UserDefaultSettings)

--- a/.gitignore
+++ b/.gitignore
@@ -23,4 +23,6 @@ AddOns/Blizzard_TokenUI
 AddOns/Blizzard_TradeSkillUI
 AddOns/Blizzard_TrainerUI
 Icons
+PetActionBar
+ShapeshiftBar
 TargetingFrame
