Update Project Settings

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ AddOns/Blizzard_BindingUI
 AddOns/Blizzard_Calendar
 AddOns/Blizzard_CombatLog
 AddOns/Blizzard_CombatText
+AddOns/Blizzard_DebugTools
 AddOns/Blizzard_GlyphUI
 AddOns/Blizzard_GMChatUI
 AddOns/Blizzard_GMSurveyUI
