1. update git ignore file 2. update TrinketMenu default settings

--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,29 @@
 
-.idea/
-AddOns/Blizzard_AchievementUI
-AddOns/Blizzard_ArenaUI
-AddOns/Blizzard_AuctionUI
-AddOns/Blizzard_BarbershopUI
-AddOns/Blizzard_BattlefieldMinimap
-AddOns/Blizzard_BindingUI
-AddOns/Blizzard_Calendar
-AddOns/Blizzard_CombatLog
-AddOns/Blizzard_CombatText
-AddOns/Blizzard_DebugTools
-AddOns/Blizzard_GlyphUI
-AddOns/Blizzard_GMChatUI
-AddOns/Blizzard_GMSurveyUI
-AddOns/Blizzard_GuildBankUI
-AddOns/Blizzard_InspectUI
-AddOns/Blizzard_ItemSocketingUI
-AddOns/Blizzard_MacroUI
-AddOns/Blizzard_RaidUI
-AddOns/Blizzard_TalentUI
-AddOns/Blizzard_TimeManager
-AddOns/Blizzard_TokenUI
-AddOns/Blizzard_TradeSkillUI
-AddOns/Blizzard_TrainerUI
-Icons
-PetActionBar
-ShapeshiftBar
-TargetingFrame
+/.idea/
+/AddOns/Blizzard_AchievementUI
+/AddOns/Blizzard_ArenaUI
+/AddOns/Blizzard_AuctionUI
+/AddOns/Blizzard_BarbershopUI
+/AddOns/Blizzard_BattlefieldMinimap
+/AddOns/Blizzard_BindingUI
+/AddOns/Blizzard_Calendar
+/AddOns/Blizzard_CombatLog
+/AddOns/Blizzard_CombatText
+/AddOns/Blizzard_DebugTools
+/AddOns/Blizzard_GlyphUI
+/AddOns/Blizzard_GMChatUI
+/AddOns/Blizzard_GMSurveyUI
+/AddOns/Blizzard_GuildBankUI
+/AddOns/Blizzard_InspectUI
+/AddOns/Blizzard_ItemSocketingUI
+/AddOns/Blizzard_MacroUI
+/AddOns/Blizzard_RaidUI
+/AddOns/Blizzard_TalentUI
+/AddOns/Blizzard_TimeManager
+/AddOns/Blizzard_TokenUI
+/AddOns/Blizzard_TradeSkillUI
+/AddOns/Blizzard_TrainerUI
+/Icons
+/PetActionBar
+/ShapeshiftBar
+/TargetingFrame
