--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 
 /.idea/workspace.xml
+/.idea/checkstyle-idea.xml
+/.idea/codeStyles/
+/.idea/inspectionProfiles/
 /.idea/dictionaries/
 /AddOns/Blizzard_AchievementUI
 /AddOns/Blizzard_ArenaUI
